اضافة بعض التحسينات ثمل تصفية الكلمات المسيئة

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 NODE_ENV=development 
-MAX_RETRIES=5
+MAX_RETRIES=10
 RETRY_DELAY=5000
-# EXECUTABLE_PATH=<your-puppeteer-executable-path>
-EXECUTABLE_PATH="C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe"
+EXECUTABLE_PATH="C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe" # <your-puppeteer-executable-path>
 DATABASE_PATH="src/database/database.sqlite"
+BOT_PHONE_NUMBER=966559298917
 ADMIN_PHONE_NUMBER=966533557530
 DEFAULT_AUTHOR=Unknown Author
 DEFAULT_TITLE=Untitled
