--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 NODE_ENV=development 
 PUPPETEER_EXECUTABLE_PATH="C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe" # <your-puppeteer-executable-path>
-DEFAULT_AUTHOR=StickerWorld 🌏 #SambosaBot 🥟
+DEFAULT_AUTHOR=SambosaBot 🥟
 GROUP_JOIN=false
 GROUP_LEAVE=false
 STICKER_AUTO=false
+
+# تعبير كرون لوقت القفل: "0 1 * * *" تعني الساعة 1:00 فجرا يوميًا
+LOCK_CRON="0 1 * * *"
+# تعبير كرون لوقت الفتح: "0 13 * * *" تعني الساعة 13:00 ظهرا يوميًا
+UNLOCK_CRON="0 13 * * *"
